# manim-lamination-builder

./: .gitignore  Lamination.py  README.md  animation.py  chord.py  custom_json.py  generate.py  lamination.py  main.py  morph.py  points.py  proposed_refactors.txt  pyproject.toml  test.json  test.json5  todo.txt
manim_lamination_builder/: DepSeqList.py  __init__.py  __main__.py  animation.py  chord.py  construct_quigs.py  constructions.py  custom_json.py  deployment_sequences.py  generate.py  lamination.py  leaf_polygon_conversion.py  main.py  malaugh.py  morph.py  new_generate.py  orbits.py  points.py  pull_back_tree.py  pull_backs.py  rabbit_psi_and_quotent.py  sibling_trees.py  test_DepSeqList.py  visual_settings.py
tests/: DepSeqList_test.py  animation_test.py  chords_test.py  critical_tree_test.py  dep_seq_list_test.py  double_orbit_test.py  fraction_simplify_test.py  generate2.py  generational_fdl_graph_test.py  main_test.py  malaugh_test.py  morph_test.py  new_generate_test.py  orbits_test.py  points_test.py  pull_back_tree_test.py  pull_backs_test.py  sibling_portraits_test.py  tree_benchmark.py
