[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "manim_lamination_builder"
version = "0.2.1"
authors = [
  { name="Forrest Hilton", email="forrestmhilton@gmail.com" },
]
description = "a replacement to lamination builder that uses manim instead of the browser"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
  "manim", "json5", "json"
]
[project.urls]
"Homepage" = "https://github.com/ForrestHilton/manim-lamination-builder"
